[project]
name = "dqu"
version = "0.2.3"
authors = [
  { name="Keshav Singh", email="masterkeshav@gmail.com" },
]
description = "Build intelligent, efficient, and trustable Data & ML Engineering Pipelines with this enterprise-ready Data Quality framework."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
